--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
